--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,12 +1,5 @@
-<h1>Users controller, edit action</h1>
-
-<p>Edit this file in <tt>app/views/users/edit.html.erb</tt></p>
-<p>For more information and examples of CRUD views read <a href="http://wiki.merbivore.com/howto/crud_view_example_with_merb_using_erb"> this wiki page</a>
-
-<div class="breadcrumbs">
-<%= link_to 'Users', resource(:users) %>
-<%= link_to @user.name, resource(@user) %>
-</div>
+<div align='center'>
+<h3>Edit user account</h3>
 
 <%= error_messages_for @user %>
 
@@ -19,3 +12,4 @@
 	<tr><td></td><td align='right'><%= submit "Update" %></td></tr>
 	</table>
 <% end =%>
+</div>
