--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,5 @@
-<div class="breadcrumbs">
-<%= link_to 'Users', resource(:users) %>
-</div>
+<div align='center'>
+<h3>Create a new user account</h3>
 
 <%= error_messages_for @user %>
 
@@ -13,3 +12,4 @@
 	<tr><td></td><td align='right'><%= submit "Signup" %></td></tr>
 	</table>
 <% end =%>
+</h3>
