--- a/app/views/layout/application.html.erb
+++ b/app/views/layout/application.html.erb
@@ -14,14 +14,14 @@
 	<div align='center' id='top_container'>
 		<div id='top_inner_container' align='center'>
 			<table class='table_container'><tr><td valign='center' id='controls_container'>
-			<%= link_to "<b>Home</b>", '/home/index', :class => 'boardlink' %> |
+			<b><%= link_to "Home", url(:controller => :home, :action => :index), :class => 'boardlink' %></b> |
 			<%= link_to "Whiteboards", url(:whiteboards) %> | 
 			<%= link_to "Groups", url(:groups) %> 
 			<% if session.user %>
 					&nbsp; &nbsp;
 			  	<!-- logged in user menu -->
 			  	[<%= image_tag session.user.gravatar_url(12), :class => 'userpicture' %>
-			   <%= link_to session.user.name, url(:user, session.user) %>] - <%= link_to 'Logout', '/logout' unless session.user.nil? %>
+			   <%= link_to session.user.name, url(:controller => :home, :action => :index) %>] - <%= link_to 'Logout', '/logout' unless session.user.nil? %>
 			<% else %>
 				<%= link_to "Signup", "/users/new" %> |
 				<%= link_to "Login", "/login" %>
